--- a/CocktailBar/Base.lproj/Main.storyboard
+++ b/CocktailBar/Base.lproj/Main.storyboard
@@ -7,7 +7,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Cocktails-->
+        <!--Search-->
         <scene sceneID="z8B-PZ-9JQ">
             <objects>
                 <viewController id="E0m-lM-HDN" customClass="SearchViewController" customModule="CocktailBar" customModuleProvider="target" sceneMemberID="viewController">
@@ -33,7 +33,7 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="qyo-zq-BlT"/>
                     </view>
-                    <navigationItem key="navigationItem" title="Cocktails" id="FaC-Tx-NtV"/>
+                    <navigationItem key="navigationItem" title="Search" id="FaC-Tx-NtV"/>
                     <connections>
                         <outlet property="tableView" destination="W1A-cp-Ltj" id="vtk-4p-9GM"/>
                         <segue destination="O4m-aO-IRY" kind="show" identifier="showDetails" id="QBv-42-hRX"/>
@@ -43,7 +43,7 @@
             </objects>
             <point key="canvasLocation" x="-152.17391304347828" y="44.866071428571423"/>
         </scene>
-        <!--Collection View Controller-->
+        <!--Collections-->
         <scene sceneID="wNa-3z-dDF">
             <objects>
                 <viewController id="Xcq-LL-GsD" customClass="_CollectionViewController" customModule="CocktailBar" customModuleProvider="target" sceneMemberID="viewController">
@@ -76,7 +76,7 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="fN0-vf-LA6"/>
                     </view>
-                    <navigationItem key="navigationItem" id="GCE-DF-qNb"/>
+                    <navigationItem key="navigationItem" title="Collections" id="GCE-DF-qNb"/>
                     <connections>
                         <outlet property="collectionView" destination="wQG-fw-enJ" id="HWs-TL-cgm"/>
                     </connections>
@@ -257,21 +257,28 @@
             </objects>
             <point key="canvasLocation" x="549.27536231884062" y="46.875"/>
         </scene>
-        <!--Item 1-->
+        <!--Favourites-->
         <scene sceneID="2rd-0R-6PA">
             <objects>
                 <viewController id="5ir-so-UwH" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="YeN-oe-dcI">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="CFi-mZ-mQ8">
+                                <rect key="frame" x="0.0" y="88" width="414" height="725"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                            </tableView>
+                        </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <viewLayoutGuide key="safeArea" id="r7q-RM-3Wr"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Item 1" id="R1N-MM-BzE"/>
+                    <navigationItem key="navigationItem" title="Favourites" id="hU5-PY-mdJ"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="97N-3e-zfk" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="130" y="-1357"/>
+            <point key="canvasLocation" x="1039.1304347826087" y="-1357.3660714285713"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="87f-bX-tJE">
@@ -281,9 +288,11 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="49"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="barTintColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="selectedImageTintColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </tabBar>
                     <connections>
-                        <segue destination="5ir-so-UwH" kind="relationship" relationship="viewControllers" id="01i-5k-C8y"/>
+                        <segue destination="73l-Ws-emE" kind="relationship" relationship="viewControllers" id="01i-5k-C8y"/>
                         <segue destination="eIh-pf-iay" kind="relationship" relationship="viewControllers" id="pDh-yK-OHH"/>
                         <segue destination="faR-hc-ccX" kind="relationship" relationship="viewControllers" id="0OI-zK-OoA"/>
                     </connections>
@@ -301,6 +310,7 @@
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="MKo-IQ-iQ1">
                         <rect key="frame" x="0.0" y="44" width="414" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
+                        <color key="barTintColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
@@ -320,6 +330,7 @@
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="RGn-rS-4ol">
                         <rect key="frame" x="0.0" y="44" width="414" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
+                        <color key="barTintColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
@@ -330,8 +341,29 @@
             </objects>
             <point key="canvasLocation" x="129" y="-656"/>
         </scene>
+        <!--Favourites-->
+        <scene sceneID="DsJ-Re-uZ7">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="73l-Ws-emE" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Favourites" image="heart.fill" catalog="system" id="R1N-MM-BzE"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="7hE-6E-MY6">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="barTintColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="5ir-so-UwH" kind="relationship" relationship="rootViewController" id="zAf-lc-Exc"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="6by-6g-5Dn" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="128.98550724637681" y="-1357.3660714285713"/>
+        </scene>
     </scenes>
     <resources>
         <image name="heart" catalog="system" width="128" height="109"/>
+        <image name="heart.fill" catalog="system" width="128" height="109"/>
     </resources>
 </document>
