--- a/CocktailBar/Views/SearchViewCell.xib
+++ b/CocktailBar/Views/SearchViewCell.xib
@@ -35,8 +35,8 @@
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="drinkName" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="b8F-Xd-I6X">
-                                <rect key="frame" x="28" y="20" width="114.5" height="30"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="drinkName" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="b8F-Xd-I6X">
+                                <rect key="frame" x="28" y="20" width="240" height="30"/>
                                 <fontDescription key="fontDescription" name="AppleSDGothicNeo-Regular" family="Apple SD Gothic Neo" pointSize="25"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
@@ -54,11 +54,12 @@
                         <color key="backgroundColor" red="0.34353165404080599" green="0.44296645862163231" blue="0.59731217616580312" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="b8F-Xd-I6X" firstAttribute="leading" secondItem="spE-9R-Xcx" secondAttribute="leading" constant="28" id="4Id-z6-Fak"/>
+                            <constraint firstItem="UxE-08-lPf" firstAttribute="leading" secondItem="b8F-Xd-I6X" secondAttribute="trailing" constant="10" id="6r2-Cc-jdS"/>
                             <constraint firstItem="b8F-Xd-I6X" firstAttribute="top" secondItem="spE-9R-Xcx" secondAttribute="top" constant="20" id="DnK-pc-00C"/>
-                            <constraint firstItem="vaf-Xz-gmn" firstAttribute="top" secondItem="b8F-Xd-I6X" secondAttribute="bottom" constant="54" id="NmZ-fm-17N"/>
                             <constraint firstItem="yWV-o9-f40" firstAttribute="centerY" secondItem="UxE-08-lPf" secondAttribute="centerY" id="Qn4-uf-ihX"/>
                             <constraint firstItem="HYO-D6-nfP" firstAttribute="leading" secondItem="spE-9R-Xcx" secondAttribute="leading" constant="54" id="XHV-3S-U4A"/>
                             <constraint firstItem="yWV-o9-f40" firstAttribute="centerX" secondItem="UxE-08-lPf" secondAttribute="centerX" constant="2" id="XMN-T5-dKo"/>
+                            <constraint firstItem="vaf-Xz-gmn" firstAttribute="top" secondItem="spE-9R-Xcx" secondAttribute="top" constant="104" id="ddZ-7B-BnC"/>
                             <constraint firstItem="vaf-Xz-gmn" firstAttribute="leading" secondItem="spE-9R-Xcx" secondAttribute="leading" constant="49" id="i2I-ak-BJh"/>
                             <constraint firstAttribute="bottom" secondItem="UxE-08-lPf" secondAttribute="bottom" constant="24" id="mwl-6l-arX"/>
                             <constraint firstAttribute="trailing" secondItem="UxE-08-lPf" secondAttribute="trailing" constant="22" id="oxH-cA-0ul"/>
