--- a/CocktailBar/Views/CollectionCell.xib
+++ b/CocktailBar/Views/CollectionCell.xib
@@ -52,15 +52,19 @@
                 <constraints>
                     <constraint firstItem="XjZ-yS-dmS" firstAttribute="leading" secondItem="51N-iU-Lxz" secondAttribute="leading" id="1is-f0-QQ8"/>
                     <constraint firstAttribute="bottom" secondItem="H3O-jI-scQ" secondAttribute="bottom" id="1yA-fW-hPk"/>
+                    <constraint firstItem="H3O-jI-scQ" firstAttribute="top" secondItem="XjZ-yS-dmS" secondAttribute="top" id="63o-xa-iOy"/>
                     <constraint firstItem="H3O-jI-scQ" firstAttribute="leading" secondItem="51N-iU-Lxz" secondAttribute="leading" id="6k7-wU-Grr"/>
                     <constraint firstItem="9sD-KS-fQs" firstAttribute="leading" secondItem="51N-iU-Lxz" secondAttribute="leading" id="7pp-a1-wGn"/>
                     <constraint firstAttribute="trailing" secondItem="H3O-jI-scQ" secondAttribute="trailing" id="9d8-wE-jiG"/>
+                    <constraint firstItem="H3O-jI-scQ" firstAttribute="trailing" secondItem="XjZ-yS-dmS" secondAttribute="trailing" id="FgK-St-JkE"/>
                     <constraint firstAttribute="bottom" secondItem="XjZ-yS-dmS" secondAttribute="bottom" id="I2j-Aj-WQU"/>
                     <constraint firstItem="XjZ-yS-dmS" firstAttribute="top" secondItem="51N-iU-Lxz" secondAttribute="top" id="KCA-JW-f4k"/>
+                    <constraint firstItem="H3O-jI-scQ" firstAttribute="bottom" secondItem="XjZ-yS-dmS" secondAttribute="bottom" id="Mbf-Gr-VBY"/>
                     <constraint firstItem="H3O-jI-scQ" firstAttribute="top" secondItem="51N-iU-Lxz" secondAttribute="top" id="Q26-C8-Gmz"/>
                     <constraint firstAttribute="trailing" secondItem="XjZ-yS-dmS" secondAttribute="trailing" id="QFg-4y-e9Q"/>
                     <constraint firstAttribute="bottom" secondItem="9sD-KS-fQs" secondAttribute="bottom" id="X5T-3A-aHi"/>
                     <constraint firstItem="9sD-KS-fQs" firstAttribute="top" secondItem="51N-iU-Lxz" secondAttribute="top" id="bvp-JG-82f"/>
+                    <constraint firstItem="H3O-jI-scQ" firstAttribute="leading" secondItem="XjZ-yS-dmS" secondAttribute="leading" id="ofn-hg-Jvm"/>
                     <constraint firstAttribute="trailing" secondItem="9sD-KS-fQs" secondAttribute="trailing" id="z4T-mk-olS"/>
                 </constraints>
             </collectionViewCellContentView>
